# FocusBuddy

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.MD  SETUP.md  pyproject.toml  render.yaml  requirements.txt  vercel_build.py
backend/: crud.py  database.py  main.py  models.py  reset_db.py  schemas.py
docs/: session-handoff-2026-06-26-planner-modal-current-plan.md
extension/: README.md  background.js  manifest.json
frontend/: analytics.html  index.html  plan.html  settings.html  tracker.html  vercel.json
frontend/css/: styles.css
frontend/js/: api.js  config.js  demo-context.js  face-metrics.js  focus-detector.js  focus-engine.js  notify.js  plan-calendar.js  planning-insights.js  session-replay.js  settings-menu.js  theme.js
tests/: test_chunk_d_planning.py  test_demo_workspaces.py
tools/: serve.ps1  stop-serve.ps1
