[project]
name = "focus-buddy"
version = "0.1.0"
description = "Focus Buddy public judge demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "pydantic",
    "python-dotenv",
    "google-genai",
]

[tool.vercel]
entrypoint = "backend.main:app"

[tool.vercel.scripts]
build = "python vercel_build.py"
